--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "geoid-matcher",
+  "name": "geojson-data-link",
   "version": "0.1.0",
   "description": "A tool to match GeoJSON point coordinates (or a polygon centroid) to a polygon and copy over properties",
   "main": "index.js",
-  "scripts": {
-    "test": "node test"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cody1213/geoid-matcher.git"
+    "url": "git+https://github.com/the-data-center/geojson-data-link.git"
   },
   "keywords": [
     "geojson",
@@ -18,13 +15,13 @@
   "author": "Cody Brumfield",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/cody1213/geoid-matcher/issues"
+    "url": "https://github.com/the-data-center/geojson-data-link/issues"
   },
-  "homepage": "https://github.com/cody1213/geoid-matcher#readme",
+  "homepage": "https://github.com/the-data-center/geojson-data-link#readme",
   "dependencies": {
-    "@turf/boolean-point-in-polygon": "*",
-    "@turf/centroid": "*",
-    "@turf/helpers": "*",
+    "@turf/boolean-point-in-polygon": "^6.0.1",
+    "@turf/centroid": "^6.0.1",
+    "@turf/helpers": "^6.0.1",
     "yargs": "^15.0.2"
   }
 }
