--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geojson-data-link",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A tool to match GeoJSON point coordinates (or a polygon centroid) to a polygon and copy over properties",
   "main": "index.js",
   "repository": {
@@ -23,5 +23,9 @@
     "@turf/centroid": "^6.0.1",
     "@turf/helpers": "^6.0.1",
     "yargs": "^15.0.2"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.8.0"
   }
 }
