--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.2.1",
   "description": "A tool to match GeoJSON point coordinates (or a polygon centroid) to a polygon and copy over properties",
   "main": "index.js",
+  "bin": {
+    "geojson-data-link": "./index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/the-data-center/geojson-data-link.git"
   },
   "keywords": [
     "geojson",
-    "geography",
-    "geoid"
+    "geography"
   ],
   "author": "Cody Brumfield",
   "license": "MIT",
