--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "yargs": "^15.0.2"
   },
   "devDependencies": {
+    "@turf/intersect": "^6.1.3",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0"
   }
